--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,12 @@
+#\u6307\u5b9a\u914d\u7f6e\u6587\u4ef6
+spring.profiles.active=google
+
 #\u8bbe\u7f6e\u670d\u52a1\u5668\u7aef\u53e3
 server.port=9000
 #\u8bbe\u7f6e\u9879\u76eeContextPath
 server.context-path=/
 #\u8bbe\u7f6eTomcat\u7f16\u7801
 server.tomcat.uri-encoding=UTF-8
-#\u8bbe\u7f6e\u89c6\u56fe\u89e3\u6790\u5668\u8def\u5f84
-spring.mvc.view.prefix=/jsp/
-#\u8bbe\u7f6e\u89c6\u56fe\u89e3\u6790\u5668\u540e\u7f00
-spring.mvc.view.suffix=.jsp
 #\u5f00\u53d1\u65f6\u5173\u95ed\u7f13\u5b58,\u4e0d\u7136\u6ca1\u6cd5\u770b\u5230\u5b9e\u65f6\u9875\u9762
 spring.thymeleaf.cache=false
 
@@ -19,12 +18,10 @@ spring.cache.type=ehcache
 spring.cache.ehcache.config=classpath:ehcache.xml
 
 #\u6570\u636e\u5e93\u914d\u7f6e
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/photo_server_google?useUnicode=true&serverTimezone=Hongkong&characterEncoding=UTF-8
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/photo_server_google?useUnicode=true&serverTimezone=Hongkong&characterEncoding=UTF-8
 #spring.datasource.url=jdbc:mysql://localhost:3306/photo_server?useUnicode=true&serverTimezone=Hongkong&characterEncoding=UTF-8
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=gongxm
-spring.datasource.password=99886128gxm
+
 
 #\u8fde\u63a5\u6c60\u914d\u7f6e
 spring.datasource.initialSize=5
@@ -46,4 +43,12 @@ spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 
 #mybatis\u663e\u793asql\u8bed\u53e5
-#logging.level.com.gongxm.photo.mapper=debug
+logging.level.com.gongxm.photo.mapper=debug
+
+#freemarker\u914d\u7f6e
+spring.freemarker.charset=UTF-8
+spring.freemarker.suffix=.ftl
+spring.freemarker.content-type=text/html; charset=utf-8
+spring.freemarker.template-loader-path=classpath:/templates
+
+
