--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,5 +1,6 @@
+#\u6570\u636e\u5e93\u914d\u7f6e
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/photo_server?useUnicode=true&serverTimezone=Hongkong&characterEncoding=UTF-8
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=gongxm
-spring.datasource.password=99886128gxm
+spring.datasource.username=root
+spring.datasource.password=root
