--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #\u6307\u5b9a\u914d\u7f6e\u6587\u4ef6
-spring.profiles.active=google
+spring.profiles.active=local,dev
+#spring.profiles.active=alios,pro
 
 #\u8bbe\u7f6e\u670d\u52a1\u5668\u7aef\u53e3
 server.port=9000
@@ -16,12 +17,8 @@ spring.mvc.static-path-pattern: /static/**
 #\u7f13\u5b58\u914d\u7f6e\u6587\u4ef6
 spring.cache.type=ehcache
 spring.cache.ehcache.config=classpath:ehcache.xml
-
-#\u6570\u636e\u5e93\u914d\u7f6e
-
-#spring.datasource.url=jdbc:mysql://localhost:3306/photo_server_google?useUnicode=true&serverTimezone=Hongkong&characterEncoding=UTF-8
-#spring.datasource.url=jdbc:mysql://localhost:3306/photo_server?useUnicode=true&serverTimezone=Hongkong&characterEncoding=UTF-8
-
+#solr\u914d\u7f6e
+spring.data.solr.host=http://127.0.0.1:8983/solr
 
 #\u8fde\u63a5\u6c60\u914d\u7f6e
 spring.datasource.initialSize=5
@@ -42,8 +39,6 @@ spring.datasource.testOnReturn=false
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 
-#mybatis\u663e\u793asql\u8bed\u53e5
-logging.level.com.gongxm.photo.mapper=debug
 
 #freemarker\u914d\u7f6e
 spring.freemarker.charset=UTF-8
