--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>${artifactId}</finalName>
+		<finalName>${project.artifactId}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -109,6 +109,7 @@
 				</executions>
 			</plugin>
 			<!-- 把jar包拷贝到指定目录位置 -->
+			<!--
 			<plugin>
 				<artifactId>maven-antrun-plugin</artifactId>
 				<executions>
@@ -131,6 +132,7 @@
 					</execution>
 				</executions>
 			</plugin>
+			-->
 		</plugins>
 
 		<resources>
